--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font Awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+
 .navbar {
     background-color: #0c64a2;
     padding: 0.35rem 1rem;
