--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,10 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Font Awesome
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
 
 .navbar {
     background-color: #0c64a2;
